[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Riku <134082872+rigozu9@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
jsonpickle = "2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
